Connect frontend to live Render backend and configure CORS